Working reselience between services and registry